IEでwarningがうるさい

--- a/2016/src/html/_partial/timetable-conference.ejs
+++ b/2016/src/html/_partial/timetable-conference.ejs
@@ -311,7 +311,7 @@
       <p>19:15 - Last</p>
     </div>
     <div class="timetable-content">
-      <p>Closing & Party</p>
+      <p>Closing &amp; Party</p>
     </div>
   </div>
 </div>
