--- a/2016/src/html/index.ejs
+++ b/2016/src/html/index.ejs
@@ -46,7 +46,7 @@ var page = {
           <div class="outline-body">
             <p class="outline-date">November 12 - 13, 2016</p>
             <h1 class="outline-name">東京Node学園祭2016</h1>
-            <p class="outline-location">at dots. & SHIBUYA Markcity</p>
+            <p class="outline-location">at dots. &amp; SHIBUYA Markcity</p>
           </div>
         </div>
       </div>
@@ -112,7 +112,7 @@ var page = {
           <section class="venue-access -workshop">
             <h3 class="venue-name">
               <img src="img/pin-workshop.png" class="venue-icon">
-              イベント&コミュニティスペース dots.
+              イベント&amp;コミュニティスペース dots.
             </h3>
             <p class="venue-address">
               <a href="#">
