--- a/2016/src/html/venues.ejs
+++ b/2016/src/html/venues.ejs
@@ -20,7 +20,7 @@ var page = {
         <section class="venue-access -workshop">
           <h3 class="venue-name">
             <img src="img/pin-workshop.png" class="venue-icon">
-            イベント&コミュニティスペース dots.
+            イベント&amp;コミュニティスペース dots.
           </h3>
           <p class="venue-address">
             <a href="#">
