--- a/2016/src/html/index.ejs
+++ b/2016/src/html/index.ejs
@@ -107,31 +107,7 @@ var page = {
     <div class="home-venues">
       <h2 class="home-subhead">Venue</h2>
       <div class="page-body venue-body">
-        <div class="venue-map" id="venue"></div>
-        <div class="venue-detail">
-          <section class="venue-access -workshop">
-            <h3 class="venue-name">
-              <img src="img/pin-workshop.png" class="venue-icon">
-              イベント&amp;コミュニティスペース dots.
-            </h3>
-            <p class="venue-address">
-              <a href="#">
-                東京都渋谷区宇田川町20-17 NOF渋谷公園通りビル 8F
-              </a>
-            </p>
-          </section>
-          <section class="venue-access -conference">
-            <h3 class="venue-name">
-              <img src="img/pin-conference.png" class="venue-icon">
-              CyberAgent セミナールーム
-            </h3>
-            <p class="venue-address">
-              <a href="#">
-                東京都渋谷区道玄坂1-12-1 渋谷マークシティ13F
-              </a>
-            </p>
-          </section>
-        </div>
+        <%- include('_partial/venue-map') -%>
       </div>
     </div>
 
