httpsからだとIEで読み込みにコケる

--- a/2016/src/html/index.ejs
+++ b/2016/src/html/index.ejs
@@ -190,6 +190,6 @@ var page = {
 
 </div>
 
-<script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDvBLklunoaVPhXh4b1jVcXoUclUlmtNiA&extension=.js'></script>
+<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyDvBLklunoaVPhXh4b1jVcXoUclUlmtNiA&extension=.js"></script>
 
 <%- include('_layout/footer') -%>
