--- a/2016/src/html/venues.ejs
+++ b/2016/src/html/venues.ejs
@@ -31,6 +31,6 @@ var page = {
 
 <%- include('_partial/tickets') -%>
 
-<script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDvBLklunoaVPhXh4b1jVcXoUclUlmtNiA&extension=.js'></script>
+<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyDvBLklunoaVPhXh4b1jVcXoUclUlmtNiA&extension=.js"></script>
 
 <%- include('_layout/footer') -%>
