fix(schedule): replace effective types talk to browser is new server

--- a/2016/src/html/_partial/timetable-conference.ejs
+++ b/2016/src/html/_partial/timetable-conference.ejs
@@ -168,7 +168,7 @@
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">React + Reduxを使った大規模商用サービスの開発</p>
-        <p class="timetable-sessionSpeaker">yoshidan</p>
+        <p class="timetable-sessionSpeaker">Naohiro Yoshida</p>
       </div>
     </div>
   </div>
@@ -218,8 +218,8 @@
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Effective Types</p>
-        <p class="timetable-sessionSpeaker">Rob Howard</p>
+        <p class="timetable-sessionTitle">Browser is the new server</p>
+        <p class="timetable-sessionSpeaker">Gleb Bahmutov</p>
       </div>
       <div class="timetable-session">
         <p class="timetable-sessionTitle">JavaScript による並列処理：共有メモリとロック</p>
