Google Mapsリンク、アクセス追加

--- a/2016/src/html/venues.ejs
+++ b/2016/src/html/venues.ejs
@@ -16,6 +16,9 @@ var page = {
 
     <div class="page-body venue-body">
       <%- include('_partial/venue-map') -%>
+      <p class="venue-note">
+        ※ 会場へは公共交通機関でお越し下さい
+      </p>
     </div>
 
     <!-- TODO: 最寄り駅情報や会場の外観情報など
