--- a/2016/src/html/_partial/venue-map.ejs
+++ b/2016/src/html/_partial/venue-map.ejs
@@ -1,3 +1,10 @@
+<p class="venue-link">
+  <a href="https://www.google.com/maps/d/viewer?mid=1h2CLbH8K1dZe-UusLQbtWrlPyAE" target="_blank" class="u-link">
+    <span class="venue-linkIcon">
+      <img src="img/ico-map.svg" width="16" height="16" alt="">
+    </span>大きな地図でみる
+  </a>
+</p>
 <div class="venue-map" id="venue"></div>
 <div class="venue-detail">
   <section class="venue-access -workshop">
@@ -6,10 +13,13 @@
       イベント&amp;コミュニティスペース dots.
     </h3>
     <p class="venue-address">
-      <a href="https://www.google.co.jp/maps/search/東京都渋谷区宇田川町20-17" target="_blank">
+      <a href="https://www.google.co.jp/maps/search/東京都渋谷区宇田川町20-17" target="_blank" class="u-link">
         東京都渋谷区宇田川町20-17 NOF渋谷公園通りビル 8F
       </a>
     </p>
+    <ul class="venue-station">
+      <li>JR線/東京メトロ/東急線「渋谷」駅 ハチ公口から徒歩5分</li>
+    </ul>
   </section>
   <section class="venue-access -conference">
     <h3 class="venue-name">
@@ -17,9 +27,13 @@
       CyberAgent セミナールーム
     </h3>
     <p class="venue-address">
-      <a href="https://www.google.co.jp/maps/search/東京都渋谷区道玄坂1-12-1" target="_blank">
+      <a href="https://www.google.co.jp/maps/search/東京都渋谷区道玄坂1-12-1" target="_blank" class="u-link">
         東京都渋谷区道玄坂1-12-1 渋谷マークシティ13F
       </a>
     </p>
+    <ul class="venue-station">
+      <li>JR線/東京メトロ/東急線「渋谷」駅 ハチ公口から徒歩5分</li>
+      <li>京王井の頭線「渋谷」駅 直結</li>
+    </ul>
   </section>
 </div>
