--- a/2016/src/scss/main.scss
+++ b/2016/src/scss/main.scss
@@ -166,7 +166,7 @@ a {
     box-shadow: 2px 2px 0 0 rgba($color-shadow, 0.5);
     transition: all 150ms ease-in;
     &:hover {
-      background-color: $color-whitefog;
+      background-color: mix($color-sunflower,$color-whitefog,50%);
     }
     &:active {
       transform: translate(2px, 2px);
@@ -181,7 +181,7 @@ a {
     box-shadow: 2px 2px 0 0 rgba($color-shadow, 0.5);
     transition: all 150ms ease-in;
     &:hover {
-      background-color: $color-whitefog;
+      background-color: mix($color-leaf,$color-whitefog,50%);
     }
     &:active {
       transform: translate(2px, 2px);
@@ -1694,13 +1694,7 @@ $hex-image: $hex-canvas * $hex-ratio;
   }
 }
 .tickets-header {
-  margin-bottom: 2rem;
-  @include over-sm {
-    margin-bottom: 2rem;
-  }
-  @include over-md {
-    margin-bottom: 4rem;
-  }
+  margin-bottom: 1.25rem;
 }
 .tickets-title {
   line-height: $line-flat;
@@ -1720,9 +1714,9 @@ $hex-image: $hex-canvas * $hex-ratio;
   margin-top: 1rem;
   text-align: center;
   color: $color-inky;
-  font-size: 0.75rem;
+  font-size: 0.875rem;
   @include over-md {
-    font-size: 0.875rem;
+    font-size: 1rem;
   }
 }
 .tickets-body {
@@ -1771,6 +1765,24 @@ $hex-image: $hex-canvas * $hex-ratio;
   display: block;
   font-size: 0.75em;
   text-transform: none;
+}
+
+.tickets-inner {
+  box-sizing: border-box;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  background-color: $color-whitefog;
+  border: 4px solid $color-sand;
+  @include over-hg {
+    border: 8px solid $color-sand;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2rem;
+    padding: 2rem;
+    max-width: $width-container;
+  }
 }
 
 // Sponsors
