プレス向けの説明を追加

--- a/2016/src/html/index.ejs
+++ b/2016/src/html/index.ejs
@@ -115,7 +115,20 @@ var page = {
 
   </div>
 
-<!-- Sponsors -->
+<!-- Press -->
+
+  <aside class="press">
+    <div class="press-inner">
+      <h3 class="press-subhead">For Press</h3>
+      <div class="press-body">
+        <p>東京Node学園祭2016の取材につきましては、会場のセキュリティの問題で、事前にご登録いただかないと入場することができません。<br/>
+          取材をご希望される方は、2016年10月31日（月）までにnodefest@nodejs.jpまで、取材ご担当者の氏名・所属、媒体名などをご連絡いただければ幸いです。<br/>
+          なお、当日は満席になることが予想されるため、立ち見での取材をお願いいたします。あらかじめご了承ください。</p>
+      </div>
+    </div>
+  </aside>
+
+  <!-- Sponsors -->
   <div class="home-sponsors">
     <h2 class="home-subhead home-sponsorsSubhead">Sponsors</h2>
     <div class="sponsors-section">
@@ -181,14 +194,9 @@ var page = {
       </ul>
     </div>
 
-    <!--<p class="sponsors-lead">協賛を希望される方は専用フォームよりお申し込みください。</p>-->
-    <!--<div class="sponsors-action">-->
-    <!--<a href="https://docs.google.com/forms/d/e/1FAIpQLSfNdD06sIUy5noreZ6yp_ZzMlAFoIRq51V1bFwtcuY4xh29Yw/viewform"-->
-    <!--class="Button -invert -cfs">Sponsorship</a>-->
-    <!--</div>-->
   </div>
 
-</div>
+</aside>
 
 <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyDvBLklunoaVPhXh4b1jVcXoUclUlmtNiA&extension=.js"></script>
 
