--- a/2016/src/html/_partial/timetable-conference.ejs
+++ b/2016/src/html/_partial/timetable-conference.ejs
@@ -61,8 +61,8 @@
         <p class="timetable-sessionSpeaker">Alejandro Oviedo</p>
       </div>
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">TBD</p>
-        <p class="timetable-sessionSpeaker">TBD</p>
+        <p class="timetable-sessionTitle">Building Interactive npm Command Line Modules</p>
+        <p class="timetable-sessionSpeaker">Irina Shestak</p>
       </div>
     </div>
   </div>
