--- a/2016/src/html/index.ejs
+++ b/2016/src/html/index.ejs
@@ -174,6 +174,9 @@ var page = {
         <li>
           <%- include('./_partial/sponsor', { id: 'nifty', grade: 'silver' }) %>
         </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'rakuten', grade: 'silver' }) %>
+        </li>
       </ul>
     </div>
     <div class="sponsors-section">
@@ -190,6 +193,9 @@ var page = {
         </li>
         <li>
           <%- include('./_partial/sponsor', { id: 'lig', grade: 'media' }) %>
+        </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'togetter', grade: 'media' }) %>
         </li>
       </ul>
     </div>
