--- a/2016/src/html/sponsors.ejs
+++ b/2016/src/html/sponsors.ejs
@@ -61,6 +61,9 @@ var page = {
             <li>
               <%- include('./_partial/sponsor-pr', { id: 'nifty', grade: 'silver' }) %>
             </li>
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'rakuten', grade: 'silver' }) %>
+            </li>
           </ul>
         </div>
         <div class="prs-section">
@@ -77,6 +80,9 @@ var page = {
             </li>
             <li>
               <%- include('./_partial/sponsor-pr', { id: 'lig', grade: 'media' }) %>
+            </li>
+            <li>
+              <%- include('./_partial/sponsor-pr', { id: 'togetter', grade: 'media' }) %>
             </li>
           </ul>
         </div>
