Fix power-assert title to English

--- a/2016/src/html/_partial/timetable-conference.ejs
+++ b/2016/src/html/_partial/timetable-conference.ejs
@@ -264,7 +264,7 @@
             <p class="timetable-ltsSpeaker">Yoshiki Shibukawa</p>
           </li>
           <li>
-            <p class="timetable-ltsTitle">ライブラリからツールへ - 汎用表明強化ツールとしての power-assert</p>
+            <p class="timetable-ltsTitle">From Library to Tool - power-assert as a General Purpose Assertion Enhancement Tool</p>
             <p class="timetable-ltsSpeaker">Takuto Wada</p>
           </li>
         </ul>
