スッキリわかるマークシティ入門

--- a/2016/src/html/_partial/venue-map.ejs
+++ b/2016/src/html/_partial/venue-map.ejs
@@ -35,5 +35,8 @@
       <li>JR線/東京メトロ/東急線「渋谷」駅 ハチ公口から徒歩5分</li>
       <li>京王井の頭線「渋谷」駅 直結</li>
     </ul>
+    <p class="venue-note">
+      <a href="http://frontrend.github.io/blog/shibuya-markcity/" target="_blank">スッキリわかるマークシティ入門</a>
+    </p>
   </section>
 </div>
