--- a/2016/src/scss/main.scss
+++ b/2016/src/scss/main.scss
@@ -824,11 +824,15 @@ $hex-image: $hex-canvas * $hex-ratio;
 // Introduction
 .intro {
   box-sizing: border-box;
-  margin-left: 1rem;
-  margin-right: 1rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
   padding: 1rem;
   background-color: $color-whitefog;
   border: 4px solid $color-sand;
+  @include over-md {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
   @include over-lg {
     border: 8px solid $color-sand;
     margin-left: auto;
@@ -842,10 +846,10 @@ $hex-image: $hex-canvas * $hex-ratio;
   text-align: center;
   letter-spacing: 0.08em;
   font-weight: 100;
-  font-size: 1rem;
+  font-size: 1.5rem;
   color: $color-sunred;
   @include below-sm {
-    font-size: 0.875rem;
+    font-size: 0.875em;
   }
   @include over-md {
     margin-bottom: 1rem;
@@ -867,6 +871,33 @@ $hex-image: $hex-canvas * $hex-ratio;
   @include over-md {
     font-size: 1rem;
   }
+}
+.intro-twitter {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+  line-height: 1.2;
+  text-align: center;
+  font-size: 1.5rem;
+  a {
+    text-decoration: none;
+    color: #1da1f2;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+  @include over-md {
+    font-size: 1rem;
+  }
+  @include over-lg {
+    font-size: 1.5rem;
+  }
+}
+.intro-twitterIcon {
+  width: 1.5em;
+  height: 1.5em;
+  fill: #1da1f2;
+  vertical-align: -0.35em;
 }
 
 .page {
@@ -1733,7 +1764,7 @@ $hex-image: $hex-canvas * $hex-ratio;
   a {
     text-decoration: none;
     &:hover {
-      border-bottom: 4px solid $color-sand;
+      border-bottom: 4px solid $color-sunred;
     }
   }
   @include over-md {
@@ -2573,9 +2604,9 @@ $hex-image: $hex-canvas * $hex-ratio;
 
 .u-link {
   text-decoration: none;
-  border-bottom: 4px solid $color-creamhaze;
+  border-bottom: 4px solid $color-sand;
   transition: all 150ms ease-out;
   &:hover {
-    border-bottom: 4px solid $color-sand;
+    border-bottom: 4px solid $color-sunred;
   }
 }
