--- a/2016/src/html/_partial/timetable-conference.ejs
+++ b/2016/src/html/_partial/timetable-conference.ejs
@@ -72,7 +72,7 @@
     </div>
     <div class="timetable-content">
       <div class="timetable-session">
-        <p class="timetable-sessionTitle">Build your own JavaScript powered radio</p>
+        <p class="timetable-sessionTitle">Debugging Node.js Performance Issues in Production</p>
         <p class="timetable-sessionSpeaker">Thomas Watson</p>
       </div>
       <div class="timetable-session">
