--- a/2017/src/html/_partial/svg.ejs
+++ b/2017/src/html/_partial/svg.ejs
@@ -1,10 +1,9 @@
 <svg style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
   <defs>
     <linearGradient id="mount-gradient" x1="0%" y1="0%" x2="0%" y2="100%">
-      <stop offset="0%"  stop-color="#3F6630"  stop-opacity="0.8"></stop>
-      <stop offset="30%" stop-color="#61A347"  stop-opacity="0.9"></stop>
+      <stop offset="0%"  stop-color="#D75A43" stop-opacity="0.7"></stop>
+      <stop offset="40%" stop-color="#F7DF1E" stop-opacity="0.9"></stop>
       <stop offset="50%" stop-color="#EADA96"></stop>
-      <stop offset="60%" stop-color="#EADA96"></stop>
     </linearGradient>
 
     <symbol id="mountain" id="corner" viewBox="0 0 2560 1478">
