--- a/2017/src/html/_partial/tickets.ejs
+++ b/2017/src/html/_partial/tickets.ejs
@@ -2,23 +2,17 @@
 <section class="tickets" id="tickets">
   <div class="tickets-inner">
     <header class="tickets-header">
-      <h3 class="tickets-title">Get your tickets</h3>
+      <h3 class="tickets-title">Call For Papers</h3>
       <div class="tickets-note">
-        <p>今年は2日間に分けての開催！それぞれの日程ごとにお申し込みください。</p>
+        <p>学園祭への登壇者を募集しています。セッションまたはライトニングトークでの登壇を希望の方はぜひご応募ください。</p>
+        <p>We need your talk. Please apply if you have interested in presentation.</p>
       </div>
     </header>
     <div class="tickets-body">
       <div class="tickets-action">
         <div class="tickets-button">
-          <a href="http://nodejs.connpass.com/event/43011/" class="Button -workshop" target="_blank">
-            Get 1st Day Ticket
-            <span class="tickets-buttonLead">Nov 12</span>
-          </a>
-        </div>
-        <div class="tickets-button">
-          <a href="http://nodejs.connpass.com/event/42182" class="Button -conference" target="_blank">
-            Get 2nd Day Ticket
-            <span class="tickets-buttonLead">Nov 13</span>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSf0TDlTdLWFE7yAnCyt3T_MCtJW-7u3T4XEpOVuZM61SnzG6w/viewform" class="Button -conference" target="_blank">
+            Application form
           </a>
         </div>
       </div>
