--- a/2017/src/html/index.ejs
+++ b/2017/src/html/index.ejs
@@ -1,15 +1,3 @@
-<%
-var page = {
-  speakers: [
-    'douglascrockford',
-    'jasnell',
-    'bmeck',
-    'zcbenz',
-    'yoshuawuyts',
-    'mafintosh'
-  ]
-}
-%>
 <%- include('_layout/header') -%>
 
 <%- include('_partial/svg') -%>
@@ -18,25 +6,6 @@ var page = {
 
   <div class="cover">
 
-    <header class="header cover-header">
-      <nav class="navigation">
-        <ul class="navigation-list cover-navigationList">
-          <li><a href="about.html" class="navigation-target">About</a></li>
-          <li><a href="speakers.html" class="navigation-target">Speakers</a></li>
-          <li><a href="schedule.html" class="navigation-target">Schedule</a></li>
-          <li><a href="venues.html" class="navigation-target">Venues</a></li>
-          <li><a href="sponsors.html" class="navigation-target">Sponsors</a></li>
-          <li><a href="#tickets" class="navigation-target -button">Tickets</a></li>
-        </ul>
-        <button class="navigation-button">
-          <svg xmlns="http://www.w3.org/2000/svg" class="navigation-icon"><use xlink:href="#close"></use></svg>
-        </button>
-      </nav>
-      <button class="header-button">
-        <svg xmlns="http://www.w3.org/2000/svg" class="header-icon"><use xlink:href="#nav"></use></svg>
-      </button>
-    </header>
-
     <div class="cover-inner">
 
       <img src="img/logo-tnf-invert.svg" class="cover-logo">
@@ -44,9 +13,9 @@ var page = {
       <div class="cover-outline">
         <div class="outline">
           <div class="outline-body">
-            <p class="outline-date">November 12 - 13, 2016</p>
-            <h1 class="outline-name">東京Node学園祭2016</h1>
-            <p class="outline-location">at dots. &amp; SHIBUYA Markcity</p>
+            <p class="outline-date">25-26th November <small class="u-small">(TBD)</small></p>
+            <h1 class="outline-name">東京Node学園祭2017</h1>
+            <p class="outline-location">at Fujimi Gate, Hosei University</p>
           </div>
         </div>
       </div>
@@ -61,144 +30,28 @@ var page = {
 
   <div class="main home-main">
 
-    <div class="home-speakers">
-      <h2 class="home-subhead">Featured Speakers</h2>
-
-      <ul class="speakers-list">
-        <% page.speakers.forEach(function(speaker) { %>
-        <li>
-          <%- include('_partial/speaker', { id: speaker }) -%>
-          <%- include('_partial/speaker-overlay', { id: speaker }) -%>
-        </li>
-        <% }); %>
-      </ul>
-      <div class="home-speakersAction">
-        <a href="speakers.html" class="Button -primary">
-          Check All Speakers
-        </a>
-      </div>
-    </div>
-
-    <!-- Schedule -->
-    <div class="home-schedule">
-      <h2 class="home-subhead">Schedule</h2>
-
-      <div class="home-scheduleBody">
-
-        <div class="home-scheduleSection">
-          <%- include('_partial/timetable-workshop') -%>
-
-        </div>
-
-        <div class="home-scheduleSection">
-          <%- include('_partial/timetable-conference') -%>
-
-        </div>
-
-        <div class="home-scheduleNote">
-          <p>※ セッションの内容／時間は変更になる可能性があります。</p>
-          <p>※ セッションは日本語・英語で行われます。</p>
-        </div>
-
-      </div>
-    </div>
-
     <!-- Veunes -->
     <div class="home-venues">
       <h2 class="home-subhead">Venue</h2>
       <div class="page-body venue-body">
-        <%- include('_partial/venue-map') -%>
+        <div class="venue-map" id="venue"></div>
+        <div class="venue-detail">
+          <section class="venue-access u-tac">
+            <h3 class="venue-name">
+              <img src="img/pin-conference.png" class="venue-icon">
+              法政大学 富士見ゲート
+            </h3>
+            <p class="venue-address">
+              <a href="https://www.google.co.jp/maps/place/%E6%B3%95%E6%94%BF%E5%A4%A7%E5%AD%A6%E5%AF%8C%E5%A3%AB%E8%A6%8B%E3%82%B2%E3%83%BC%E3%83%88/@35.6958983,139.7408933,15z/data=!4m5!3m4!1s0x0:0xe1a94981b929a231!8m2!3d35.6958983!4d139.7408933?shorturl=1" target="_blank" rel="noopener">
+                東京都千代田区富士見2-17-1
+              </a>
+            </p>
+          </section>
+        </div>
       </div>
     </div>
 
     <%- include('_partial/tickets') -%>
-
-  </div>
-
-<!-- Press -->
-
-  <aside class="press">
-    <div class="press-inner">
-      <h3 class="press-subhead">For Press</h3>
-      <div class="press-body">
-        <p>東京Node学園祭2016の取材につきましては、会場のセキュリティの問題で、事前にご登録いただかないと入場することができません。<br/>
-          取材をご希望される方は、2016年10月31日（月）までにnodefest@nodejs.jpまで、取材ご担当者の氏名・所属、媒体名などをご連絡いただければ幸いです。<br/>
-          なお、当日は満席になることが予想されるため、立ち見での取材をお願いいたします。あらかじめご了承ください。</p>
-      </div>
-    </div>
-  </aside>
-
-  <!-- Sponsors -->
-  <div class="home-sponsors">
-    <h2 class="home-subhead home-sponsorsSubhead">Sponsors</h2>
-    <div class="sponsors-section">
-      <h3 class="sponsors-grade">Platinum</h3>
-      <ul class="sponsors-list">
-        <li>
-          <%- include('./_partial/sponsor', { id: 'paypal', grade: 'platinum' }) %>
-        </li>
-      </ul>
-    </div>
-    <div class="sponsors-section">
-      <h3 class="sponsors-grade">Gold</h3>
-      <ul class="sponsors-list">
-        <li>
-          <%- include('./_partial/sponsor', { id: 'dwango', grade: 'gold' }) %>
-        </li>
-        <li>
-          <%- include('./_partial/sponsor', { id: 'r-tech', grade: 'gold' }) %>
-        </li>
-        <li>
-          <%- include('./_partial/sponsor', { id: 'yahoo', grade: 'gold' }) %>
-        </li>
-      </ul>
-    </div>
-    <div class="sponsors-section">
-      <h3 class="sponsors-grade">Silver</h3>
-      <ul class="sponsors-list">
-        <li>
-          <%- include('./_partial/sponsor', { id: 'pxgrid', grade: 'silver' }) %>
-        </li>
-        <li>
-          <%- include('./_partial/sponsor', { id: 'sphinx', grade: 'silver' }) %>
-        </li>
-        <li>
-          <%- include('./_partial/sponsor', { id: 'cyberagent', grade: 'silver' }) %>
-        </li>
-        <li>
-          <%- include('./_partial/sponsor', { id: 'opt', grade: 'silver' }) %>
-        </li>
-        <li>
-          <%- include('./_partial/sponsor', { id: 'uniba', grade: 'silver' }) %>
-        </li>
-        <li>
-          <%- include('./_partial/sponsor', { id: 'nifty', grade: 'silver' }) %>
-        </li>
-        <li>
-          <%- include('./_partial/sponsor', { id: 'rakuten', grade: 'silver' }) %>
-        </li>
-      </ul>
-    </div>
-    <div class="sponsors-section">
-      <h3 class="sponsors-grade">Media</h3>
-      <ul class="sponsors-list">
-        <li>
-          <%- include('./_partial/sponsor', { id: 'theport', grade: 'media' }) %>
-        </li>
-        <li>
-          <%- include('./_partial/sponsor', { id: 'qrio', grade: 'media' }) %>
-        </li>
-        <li>
-          <%- include('./_partial/sponsor', { id: 'goodpatch', grade: 'media' }) %>
-        </li>
-        <li>
-          <%- include('./_partial/sponsor', { id: 'lig', grade: 'media' }) %>
-        </li>
-        <li>
-          <%- include('./_partial/sponsor', { id: 'togetter', grade: 'media' }) %>
-        </li>
-      </ul>
-    </div>
 
   </div>
 
