Update colors, introduction

--- a/2017/src/html/_partial/intro.ejs
+++ b/2017/src/html/_partial/intro.ejs
@@ -4,7 +4,8 @@
     日本最大のNode.jsカンファレンス！
   </h2>
   <div class="intro-body">
-    <p>2017年の東京Node学園祭は、昨年に続き<strong>Be More Global, Be More Interactive</strong>をキーワードに、多くの海外ゲストに迎えて開催します。会場を法政大学に移し、より大きな会場で皆さまをお迎えします。</p>
+    <p>JavaScriptを活用する際にNode.jsはもはや「無くてはならないもの」になっています。ウェブアプリケーション、フロントエンド開発はもちろん、IoTやデスクトップアプリ、ゲームやVR等、適用範囲が広がっていっています。</p>
+    <p>Node学園祭は前回と同様「Be More Global, Be More Interactive」というスローガンの元、普段日本では出会えないような国際的に活躍しているゲストを迎えて開催します。ただ聴講するだけではなく、双方向にコミュニケーションし合える場を提供します！</p>
   </div>
   <aside class="intro-twitter">
     <a href="https://twitter.com/nodefest" target="_blank">
