Change cover bgcolor

--- a/2017/src/scss/main.scss
+++ b/2017/src/scss/main.scss
@@ -485,7 +485,7 @@ $hex-image: $hex-canvas * $hex-ratio;
 }
 
 .cover {
-  background-color: $color-forest;
+  background-color: $color-night;
   background-image: url('img/bg-header-home-sm.jpg');
   background-size: 142% auto;
   background-position: center top;
