スポンサーのロゴと一覧、またCall for sponsorsリンクを表示

--- a/2017/index.ejs
+++ b/2017/index.ejs
@@ -66,24 +66,9 @@
           <%- include('./_partial/sponsor', { id: 'r-tech', grade: 'gold' }) %>
         </li>
         <li>
-          <%- include('./_partial/sponsor', { id: 'mercari', grade: 'gold' }) %>
+          <%- include('./_partial/sponsor', { id: 'mercali', grade: 'gold' }) %>
         </li>
       </ul>
-    </div>
-    <div class="sponsors-section">
-      <h3 class="sponsors-grade">Silver</h3>
-      <ul class="sponsors-list">
-        <li>
-          <%- include('./_partial/sponsor', { id: 'cyberagent', grade: 'silver' }) %>
-        </li>
-      </ul>
-    </div>
-    <div class="sponsors-body">
-      <div class="sponsors-button">
-        <a href="https://docs.google.com/forms/d/1idEahSnv4xGEJbYhh1KpxvmsozbcTicHyEXUUqJMj4Q/viewform" class="Button -sponsors" target="_blank">
-          Join us as a sponsor
-        </a>
-      </div>
     </div>
   </div>
 
