--- a/2017/src/scss/main.scss
+++ b/2017/src/scss/main.scss
@@ -193,6 +193,21 @@ strong {
       box-shadow: 0 0 0 0 rgba($color-whitefog, 0.75);
     }
   }
+  &.-sponsors {
+    border: 4px solid $color-whitefog;
+    background-color: $color-jsyellow;
+    font-weight: 400;
+    color: $color-inky;
+    box-shadow: 2px 2px 0 0 rgba($color-shadow, 0.5);
+    transition: all 150ms ease-in;
+    &:hover {
+      background-color: mix($color-jsyellow,$color-whitefog,50%);
+    }
+    &:active {
+      transform: translate(2px, 2px);
+      box-shadow: 0 0 0 0 rgba($color-whitefog, 0.75);
+    }
+  }
   &.is-disabled {
     border-color: $color-greymist;
     background-color: $color-greymist;
@@ -1976,6 +1991,32 @@ $hex-image: $hex-canvas * $hex-ratio;
     margin-bottom: 1.5rem;
   }
 }
+
+.sponsors-button {
+  margin-top: 1rem;
+  text-align: center;
+  .Button {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 240px;
+    display: block;
+    padding: 1em;
+    font-size: 1em;
+  }
+  @include below-sm {
+    .Button {
+      padding: 1em;
+    }
+  }
+  @include over-md {
+    .Button {
+      padding: 0.5em 1em;
+      max-width: 500px;
+      font-size: 2em;
+    }
+  }
+}
+
 .sponsors-action {
   .Button {
     margin-left: auto;
