--- a/2017/src/html/index.ejs
+++ b/2017/src/html/index.ejs
@@ -13,7 +13,7 @@
       <div class="cover-outline">
         <div class="outline">
           <div class="outline-body">
-            <p class="outline-date">25-26th November <small class="u-small">(TBD)</small></p>
+            <p class="outline-date">25-26th November</p>
             <h1 class="outline-name">東京Node学園祭2017</h1>
             <p class="outline-location">at Fujimi Gate, Hosei University</p>
           </div>
