--- a/2017/src/html/index.ejs
+++ b/2017/src/html/index.ejs
@@ -50,8 +50,7 @@
         </div>
       </div>
     </div>
-
-    <%- include('_partial/tickets') -%>
+  </div>
 
   <!-- Sponsors -->
   <div class="home-sponsors">
