--- a/2017/src/html/index.ejs
+++ b/2017/src/html/index.ejs
@@ -89,7 +89,7 @@
     </div>
   </div>
 
-</aside>
+</div>
 
 <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyDvBLklunoaVPhXh4b1jVcXoUclUlmtNiA&extension=.js"></script>
 
