Add yahoo, nissan and freee as sponsors

--- a/2017/src/html/index.ejs
+++ b/2017/src/html/index.ejs
@@ -67,6 +67,12 @@
         <li>
           <%- include('./_partial/sponsor', { id: 'mercari', grade: 'gold' }) %>
         </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'yahoo', grade: 'gold' }) %>
+        </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'nissan', grade: 'gold' }) %>
+        </li>
       </ul>
     </div>
     <div class="sponsors-section">
@@ -80,6 +86,9 @@
         </li>
         <li>
           <%- include('./_partial/sponsor', { id: 'tsukuruba', grade: 'silver' }) %>
+        </li>
+        <li>
+          <%- include('./_partial/sponsor', { id: 'freee', grade: 'silver' }) %>
         </li>
       </ul>
     </div>
