--- a/2017/src/html/index.ejs
+++ b/2017/src/html/index.ejs
@@ -92,6 +92,14 @@
         </li>
       </ul>
     </div>
+    <div class="sponsors-section">
+      <h3 class="sponsors-grade">Bronze</h3>
+      <ul class="sponsors-list">
+        <li>
+          <%- include('./_partial/sponsor', { id: 'hosei', grade: 'bronze' }) %>
+        </li>
+      </ul>
+    </div>
     <div class="sponsors-body">
       <div class="sponsors-button">
         <a href="https://docs.google.com/forms/d/1idEahSnv4xGEJbYhh1KpxvmsozbcTicHyEXUUqJMj4Q/viewform" class="Button -sponsors" target="_blank">
