--- a/2017/src/scss/main.scss
+++ b/2017/src/scss/main.scss
@@ -47,7 +47,7 @@ $z-overlay: 100;
 $sponsor-banner-platinum: 560px;
 $sponsor-banner-gold: 480px;
 $sponsor-banner-silver: 360px;
-$sponsor-banner-media: 320px;
+$sponsor-banner-bronze: 320px;
 
 @mixin below-sm {
   @media (max-width: $screen-phone - 1px) {
@@ -2051,9 +2051,9 @@ $hex-image: $hex-canvas * $hex-ratio;
       max-width: $sponsor-banner-silver / 2;
     }
   }
-  &.-media {
+  &.-bronze {
     > img {
-      max-width: $sponsor-banner-media / 2;
+      max-width: $sponsor-banner-bronze / 2;
     }
   }
   @include below-sm {
@@ -2079,9 +2079,9 @@ $hex-image: $hex-canvas * $hex-ratio;
         max-width: $sponsor-banner-silver / 1.75;
       }
     }
-    &.-media {
+    &.-bronze {
       > img {
-        max-width: $sponsor-banner-media / 1.5;
+        max-width: $sponsor-banner-bronze / 1.5;
       }
     }
   }
@@ -2101,9 +2101,9 @@ $hex-image: $hex-canvas * $hex-ratio;
         max-width: $sponsor-banner-silver / 1.75;
       }
     }
-    &.-media {
+    &.-bronze {
       > img {
-        max-width: $sponsor-banner-media / 1.5;
+        max-width: $sponsor-banner-bronze / 1.5;
       }
     }
   }
@@ -2171,7 +2171,7 @@ $hex-image: $hex-canvas * $hex-ratio;
     }
     &.-gold,
     &.-silver,
-    &.-media {
+    &.-bronze {
       > * {
         flex: 0 0 50%;
         max-width: 50%;
@@ -2194,7 +2194,7 @@ $hex-image: $hex-canvas * $hex-ratio;
         max-width: 33.3%;
       }
     }
-    &.-media {
+    &.-bronze {
       > * {
         flex: 0 0 25%;
         max-width: 25%;
@@ -2241,10 +2241,10 @@ $hex-image: $hex-canvas * $hex-ratio;
       font-size: 0.875rem;
     }
   }
-  &.-media {
+  &.-bronze {
     .pr-logo {
       img {
-        max-width: $sponsor-banner-media / 2
+        max-width: $sponsor-banner-bronze / 2
       }
     }
     .pr-description {
@@ -2283,7 +2283,7 @@ $hex-image: $hex-canvas * $hex-ratio;
     }
     &.-gold,
     &.-silver,
-    &.-media {
+    &.-bronze {
       flex-direction: column;
       min-height: 100%;
       .pr-body {
@@ -2308,7 +2308,7 @@ $hex-image: $hex-canvas * $hex-ratio;
         font-size: 1.25rem;
       }
     }
-    &.-media {
+    &.-bronze {
       .pr-logo {
         img {
           max-width: 100%;
@@ -2330,7 +2330,7 @@ $hex-image: $hex-canvas * $hex-ratio;
         font-size: 1.25rem;
       }
     }
-    &.-media {
+    &.-bronze {
       .pr-name {
         font-size: 1.25rem;
       }
