Add venue sponsor as others

--- a/2017/src/html/index.ejs
+++ b/2017/src/html/index.ejs
@@ -93,10 +93,10 @@
       </ul>
     </div>
     <div class="sponsors-section">
-      <h3 class="sponsors-grade">Bronze</h3>
+      <h3 class="sponsors-grade">Venue</h3>
       <ul class="sponsors-list">
         <li>
-          <%- include('./_partial/sponsor', { id: 'hosei', grade: 'bronze' }) %>
+          <%- include('./_partial/sponsor', { id: 'hosei', grade: 'others' }) %>
         </li>
       </ul>
     </div>
